--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -215,58 +215,7 @@
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
 
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/1905.12560"
-                   target="_blank">
-                  On the equivalence between graph isomorphism testing and function approximation with GNNs
-                </a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                16th of November 2021
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Zhengdao Chen, Soledad Villar, Lei Chen, Joan Bruna
-                </a>
-              </div>
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
 
-              Joint authors of the paper <a class="item-subtitle link-style-black"
-                                            href="https://cims.nyu.edu/~chenzh/">Zhengdao Chen</a> and Prof. <a
-              class="item-subtitle link-style-black" href="https://www.ams.jhu.edu/villar/">Soledad Villar</a>. Zhengdao
-              is a PhD
-              student in Mathematics at New York University. Prof. Villar holds her position at the
-              <a
-                class="item-subtitle link-style-black" href="https://engineering.jhu.edu/ams/">Department of Applied
-                Mathematics & Statistics</a>, and <a
-              class="item-subtitle link-style-black" href="https://www.minds.jhu.edu/">Mathematical Institute for Data
-              Science</a> at Johns Hopkins University. She is interested in ML, optimization, graph
-              representation learning, and GNNs.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              Graph neural networks (GNNs) have achieved lots of success on graph-structured data. In the light of this,
-              there has been increasing interest in studying their representation power. One line of work focuses on the
-              universal approximation of permutation-invariant functions by certain classes of GNNs, and another
-              demonstrates the limitation of GNNs via graph isomorphism tests.
-              Our work connects these two perspectives and proves their equivalence. We further develop a framework of
-              the representation power of GNNs with the language of sigma-algebra, which incorporates both viewpoints.
-              Using this framework, we compare the expressive power of different classes of GNNs as well as other
-              methods on graphs. In particular, we prove that order-2 Graph G-invariant networks fail to distinguish
-              non-isomorphic regular graphs with the same degree. We then extend them to a new architecture, Ring-GNNs,
-              which succeeds on distinguishing these graphs and provides improvements on real-world social network
-              datasets.
-            </p>
-          </div>
-
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
@@ -464,6 +413,67 @@
       <div>
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
+
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/1905.12560"
+                   target="_blank">
+                  On the equivalence between graph isomorphism testing and function approximation with GNNs
+                </a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                16th of November 2021
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Zhengdao Chen, Soledad Villar, Lei Chen, Joan Bruna
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+                <a class="slight-bold">Resources:</a>
+                Zhengdao's
+                <a href="https://hannes-stark.com/assets/Slides_Zhengdao_Chen_LoGaG_11162021_2.pdf"
+                   target="_blank"
+                   class="link-style-green">slides</a>.
+                (58 participants)
+              </p>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+
+              Joint authors of the paper <a class="item-subtitle link-style-black"
+                                            href="https://cims.nyu.edu/~chenzh/">Zhengdao Chen</a> and Prof. <a
+              class="item-subtitle link-style-black" href="https://www.ams.jhu.edu/villar/">Soledad Villar</a>. Zhengdao
+              is a PhD
+              student in Mathematics at New York University. Prof. Villar holds her position at the
+              <a
+                class="item-subtitle link-style-black" href="https://engineering.jhu.edu/ams/">Department of Applied
+                Mathematics & Statistics</a>, and <a
+              class="item-subtitle link-style-black" href="https://www.minds.jhu.edu/">Mathematical Institute for Data
+              Science</a> at Johns Hopkins University. She is interested in ML, optimization, graph
+              representation learning, and GNNs.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Graph neural networks (GNNs) have achieved lots of success on graph-structured data. In the light of this,
+              there has been increasing interest in studying their representation power. One line of work focuses on the
+              universal approximation of permutation-invariant functions by certain classes of GNNs, and another
+              demonstrates the limitation of GNNs via graph isomorphism tests.
+              Our work connects these two perspectives and proves their equivalence. We further develop a framework of
+              the representation power of GNNs with the language of sigma-algebra, which incorporates both viewpoints.
+              Using this framework, we compare the expressive power of different classes of GNNs as well as other
+              methods on graphs. In particular, we prove that order-2 Graph G-invariant networks fail to distinguish
+              non-isomorphic regular graphs with the same degree. We then extend them to a new architecture, Ring-GNNs,
+              which succeeds on distinguishing these graphs and provides improvements on real-world social network
+              datasets.
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
           <div class="item" fxLayout="column">
             <div fxLayout="row">
