--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -215,7 +215,6 @@
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
 
-
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
@@ -345,7 +344,7 @@
               <h3>
                 <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.02910"
                    target="_blank">
-                  Equivariant Subgraph Aggregation Networks
+                  Equivariant Subgraph Aggregation Networks (2021)
                 </a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
@@ -393,6 +392,136 @@
             </p>
           </div>
 
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.04624"
+                   target="_blank">
+                  Iterative Refinement Graph Neural Network for Antibody Sequence-Structure Co-design (2021)
+                </a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                21st of December 2021
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Wengong Jin, Jeremy Wohlwend, Regina Barzilay, Tommi Jaakkola
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              First author Dr. <a class="item-subtitle link-style-black" href="http://people.csail.mit.edu/wengong/"
+                                  target="_blank">Wengong Jin</a> who is a Postdoctoral Associate at Eric and Wendy
+              Schmidt Center of the Broad
+              Institute. He finished his Ph.D. in MIT CSAIL, advised by <a class="item-subtitle link-style-black"
+                                                                           href="https://www.regina.csail.mit.edu/"
+                                                                           target="_blank">Regina Barzilay</a> and <a
+              class="item-subtitle link-style-black" href="https://people.csail.mit.edu/tommi/"
+              target="_blank">Tommi Jaakkola</a>. He develops
+              novel machine learning algorithms for biology, including drug discovery, immunology, genetic engineering,
+              and synthetic biology. He is particularly interested in deep generative models and graph neural networks.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Antibodies are versatile proteins that bind to pathogens like viruses and stimulate the adaptive immune
+              system. The specificity of antibody binding is determined by complementarity-determining regions (CDRs) at
+              the tips of these Y-shaped proteins. In this paper, we propose a generative model to automatically design
+              the CDRs of antibodies with enhanced binding specificity or neutralization capabilities. Previous
+              generative approaches formulate protein design as a structure-conditioned sequence generation task,
+              assuming the desired 3D structure is given a priori. In contrast, we propose to co-design the sequence and
+              3D structure of CDRs as graphs. Our model unravels a sequence autoregressively while iteratively refining
+              its predicted global structure. The inferred structure in turn guides subsequent residue choices. For
+              efficiency, we model the conditional dependence between residues inside and outside of a CDR in a
+              coarse-grained manner. Our method achieves superior log-likelihood on the test set and outperforms
+              previous baselines in designing antibodies capable of neutralizing the SARS-CoV-2 virus.
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                28th of December 2021
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
+              interested in presenting his work then just write me a message on
+              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
+                 class="link-style-green">Slack</a>
+              or via email!
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                4th of January 2022
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
+              interested in presenting his work then just write me a message on
+              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
+                 class="link-style-green">Slack</a>
+              or somewhere else!
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.14237"
+                   target="_blank">
+                  Learning Graph Cellular Automata 2021
+                </a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                11th of January 2022
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Daniele Grattarola, Lorenzo Livi, Cesare Alippi
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              First author of the paper Dr. <a class="item-subtitle link-style-black" href="https://danielegrattarola.github.io/"
+                                               target="_blank">Daniele Grattarola</a> who obtained his PhD working in Graph Machine Learning Group at the Università della Svizzera Italiana in 2021.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Cellular automata (CA) are a class of computational models that exhibit rich dynamics emerging from the
+              local interaction of cells arranged in a regular lattice. In this work we focus on a generalised version
+              of typical CA, called graph cellular automata (GCA), in which the lattice structure is replaced by an
+              arbitrary graph. In particular, we extend previous work that used convolutional neural networks to learn
+              the transition rule of conventional CA and we use graph neural networks to learn a variety of transition
+              rules for GCA. First, we present a general-purpose architecture for learning GCA, and we show that it can
+              represent any arbitrary GCA with finite and discrete state space. Then, we test our approach on three
+              different tasks: 1) learning the transition rule of a GCA on a Voronoi tessellation; 2) imitating the
+              behaviour of a group of flocking agents; 3) learning a rule that converges to a desired target state.
+            </p>
+          </div>
+
 
         </div>
         <div fxFlex="10" fxFlex.xs="2"></div>
@@ -435,13 +564,13 @@
               </div>
             </div>
             <p class="paragraph">
-                <a class="slight-bold">Resources:</a>
-                Zhengdao's
-                <a href="https://hannes-stark.com/assets/Slides_Zhengdao_Chen_LoGaG_11162021_2.pdf"
-                   target="_blank"
-                   class="link-style-green">slides</a>.
-                (58 participants)
-              </p>
+              <a class="slight-bold">Resources:</a>
+              Zhengdao's
+              <a href="https://hannes-stark.com/assets/Slides_Zhengdao_Chen_LoGaG_11162021_2.pdf"
+                 target="_blank"
+                 class="link-style-green">slides</a>.
+              (58 participants)
+            </p>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
 
