--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -215,57 +215,7 @@
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
 
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
-                <a class="item-subtitle link-style-black" href="https://openreview.net/forum?id=Wi5KUNlqWty"
-                   target="_blank">
-                  How to Find Your Friendly Neighborhood: Graph Attention Design with Self-Supervision</a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                23rd of November 2021
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Dongkwan Kim, Alice Oh
-                </a>
-              </div>
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              First author <a class="item-subtitle link-style-black" href="https://dongkwan-kim.github.io/"
-                              target="_blank">Dongkwan
-              Kim</a> who is a Ph.D. student at KAIST School of Computing, advised by <a
-              class="item-subtitle link-style-black" href="https://aliceoh9.github.io/" target="_blank">Alice Oh</a>.
-              His
-              research interest is graph representation learning models and applications to
-              social networks, code, or molecules.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              Attention mechanism in graph neural networks is designed to assign larger weights to important neighbor
-              nodes for better representation. However, what graph attention learns is not understood well,
-              particularly
-              when graphs are noisy. In this paper, we propose a self-supervised graph attention network (SuperGAT),
-              an
-              improved graph attention model for noisy graphs. Specifically, we exploit two attention forms compatible
-              with a self-supervised task to predict edges, whose presence and absence contain the inherent
-              information
-              about the importance of the relationships between nodes. By encoding edges, SuperGAT learns more
-              expressive attention in distinguishing mislinked neighbors. We find two graph characteristics influence
-              the effectiveness of attention forms and self-supervision: homophily and average degree. Thus, our
-              recipe
-              provides guidance on which attention design to use when those two graph characteristics are known. Our
-              experiment on 17 real-world datasets demonstrates that our recipe generalizes across 15 datasets of
-              them,
-              and our models designed by recipe show improved performance over baselines.
-            </p>
-          </div>
 
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
@@ -488,7 +438,7 @@
               <h3>
                 <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.14237"
                    target="_blank">
-                  Learning Graph Cellular Automata 2021
+                  Learning Graph Cellular Automata (2021)
                 </a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
@@ -542,6 +492,66 @@
       <div>
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
+
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://openreview.net/forum?id=Wi5KUNlqWty"
+                   target="_blank">
+                  How to Find Your Friendly Neighborhood: Graph Attention Design with Self-Supervision</a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                23rd of November 2021
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Dongkwan Kim, Alice Oh
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Resources:</a>
+              Dongkwan's
+              <a href="https://hannes-stark.com/assets/.pdf"
+                 target="_blank"
+                 class="link-style-green">slides</a> are coming soon.
+              (48 participants)
+            </p>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              First author <a class="item-subtitle link-style-black" href="https://dongkwan-kim.github.io/"
+                              target="_blank">Dongkwan
+              Kim</a> who is a Ph.D. student at KAIST School of Computing, advised by <a
+              class="item-subtitle link-style-black" href="https://aliceoh9.github.io/" target="_blank">Alice Oh</a>.
+              His
+              research interest is graph representation learning models and applications to
+              social networks, code, or molecules.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Attention mechanism in graph neural networks is designed to assign larger weights to important neighbor
+              nodes for better representation. However, what graph attention learns is not understood well,
+              particularly
+              when graphs are noisy. In this paper, we propose a self-supervised graph attention network (SuperGAT),
+              an
+              improved graph attention model for noisy graphs. Specifically, we exploit two attention forms compatible
+              with a self-supervised task to predict edges, whose presence and absence contain the inherent
+              information
+              about the importance of the relationships between nodes. By encoding edges, SuperGAT learns more
+              expressive attention in distinguishing mislinked neighbors. We find two graph characteristics influence
+              the effectiveness of attention forms and self-supervision: homophily and average degree. Thus, our
+              recipe
+              provides guidance on which attention design to use when those two graph characteristics are known. Our
+              experiment on 17 real-world datasets demonstrates that our recipe generalizes across 15 datasets of
+              them,
+              and our models designed by recipe show improved performance over baselines.
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
           <div class="item" fxLayout="column">
             <div fxLayout="row">
