--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -26,7 +26,7 @@
         <div fxLayout="row" fxLayoutAlign="left center">
           <p>
             <a mat-button class="group-button item-title"
-               href="https://us02web.zoom.us/j/4556095405?pwd=UmZRbC95d050TkRsZ2QvWER3SDdqUT09"
+               href="https://zoom.us/j/5775722530?pwd=ZzlGTXlDNThhUDZOdU4vN2JRMm5pQT09"
                target="_blank">Zoom Link</a>
           </p>
           <div class="next-to-button">
