--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -216,57 +216,7 @@
 
 
 
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.07875"
-                   target="_blank">
-                  Graph Neural Networks with Learnable Structural and Positional Representations</a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                30th of November 2021
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Vijay Prakash Dwivedi, Anh Tuan Luu, Thomas Laurent, Yoshua Bengio, Xavier Bresson
-                </a>
-              </div>
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              First author <a class="item-subtitle link-style-black" href="https://vijaydwivedi.com.np/"
-                              target="_blank">Vijay Prakash Dwivedi</a> who is a PhD student in Machine Learning at
-              Nanyang Technological
-              University, Singapore working with Prof. <a class="item-subtitle link-style-black"
-                                                          href="https://tuanluu.github.io/"
-                                                          target="_blank">Luu Anh Tuan</a> (NTU) and Prof. <a
-              class="item-subtitle link-style-black" href="https://scholar.google.com/citations?user=9pSK04MAAAAJ&hl=en"
-              target="_blank">Xavier Bresson</a> (NUS). His primary
-              interest is ML for graph-structured data and he has contributed in "<a
-              class="item-subtitle link-style-black" href="https://arxiv.org/abs/2003.00982"
-              target="_blank">Benchmarking Graph Neural Networks</a>"
-              and “<a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2012.09699"
-                      target="_blank">A Generalization of Transformer Networks to Graphs</a>” as part of his research.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              Graph neural networks (GNNs) have become the standard learning architectures for graphs. GNNs have been
-              applied to numerous domains ranging from quantum chemistry, recommender systems to knowledge graphs and
-              natural language processing. A major issue with arbitrary graphs is the absence of canonical positional
-              information of nodes, which decreases the representation power of GNNs to distinguish e.g. isomorphic
-              nodes and other graph symmetries. An approach to tackle this issue is to introduce Positional Encoding
-              (PE) of nodes, and inject it into the input layer, like in Transformers. Possible graph PE are Laplacian
-              eigenvectors. In this work, we propose to decouple structural and positional representations to make easy
-              for the network to learn these two essential properties. We introduce a novel generic architecture which
-              we call LSPE (Learnable Structural and Positional Encodings). We investigate several sparse and
-              fully-connected (Transformer-like) GNNs, and observe a performance increase for molecular datasets, from
-              2.87% up to 64.14% when considering learnable PE for both GNN classes.
-            </p>
-          </div>
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+
           <div class="item" fxLayout="column">
             <div fxLayout="row">
 
@@ -493,6 +443,67 @@
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
+
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.07875"
+                   target="_blank">
+                  Graph Neural Networks with Learnable Structural and Positional Representations</a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                30th of November 2021
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Vijay Prakash Dwivedi, Anh Tuan Luu, Thomas Laurent, Yoshua Bengio, Xavier Bresson
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Resources:</a>
+              Vijay's
+              <a href="https://hannes-stark.com/assets/VPDwivedi_GNN_LSPE_LoGaG_2021.pdf"
+                 target="_blank"
+                 class="link-style-green">slides</a>.
+              (71 participants)
+            </p>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              First author <a class="item-subtitle link-style-black" href="https://vijaydwivedi.com.np/"
+                              target="_blank">Vijay Prakash Dwivedi</a> who is a PhD student in Machine Learning at
+              Nanyang Technological
+              University, Singapore working with Prof. <a class="item-subtitle link-style-black"
+                                                          href="https://tuanluu.github.io/"
+                                                          target="_blank">Luu Anh Tuan</a> (NTU) and Prof. <a
+              class="item-subtitle link-style-black" href="https://scholar.google.com/citations?user=9pSK04MAAAAJ&hl=en"
+              target="_blank">Xavier Bresson</a> (NUS). His primary
+              interest is ML for graph-structured data and he has contributed in "<a
+              class="item-subtitle link-style-black" href="https://arxiv.org/abs/2003.00982"
+              target="_blank">Benchmarking Graph Neural Networks</a>"
+              and “<a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2012.09699"
+                      target="_blank">A Generalization of Transformer Networks to Graphs</a>” as part of his research.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Graph neural networks (GNNs) have become the standard learning architectures for graphs. GNNs have been
+              applied to numerous domains ranging from quantum chemistry, recommender systems to knowledge graphs and
+              natural language processing. A major issue with arbitrary graphs is the absence of canonical positional
+              information of nodes, which decreases the representation power of GNNs to distinguish e.g. isomorphic
+              nodes and other graph symmetries. An approach to tackle this issue is to introduce Positional Encoding
+              (PE) of nodes, and inject it into the input layer, like in Transformers. Possible graph PE are Laplacian
+              eigenvectors. In this work, we propose to decouple structural and positional representations to make easy
+              for the network to learn these two essential properties. We introduce a novel generic architecture which
+              we call LSPE (Learnable Structural and Positional Encodings). We investigate several sparse and
+              fully-connected (Transformer-like) GNNs, and observe a performance increase for molecular datasets, from
+              2.87% up to 64.14% when considering learnable PE for both GNN classes.
+            </p>
+          </div>
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
@@ -515,9 +526,9 @@
             <p class="paragraph">
               <a class="slight-bold">Resources:</a>
               Dongkwan's
-              <a href="https://hannes-stark.com/assets/.pdf"
+              <a href="https://hannes-stark.com/assets/211124_SuperGAT@LoGaG.pdf"
                  target="_blank"
-                 class="link-style-green">slides</a> are coming soon.
+                 class="link-style-green">slides</a>.
               (48 participants)
             </p>
             <p class="paragraph">
