--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center center">
+<div fxLayout="column" fxLayoutAlign="center center" xmlns="http://www.w3.org/1999/html">
 
   <div class="width100" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center">
     <div fxFlex="35" fxLayoutAlign="end center" fxLayoutAlign.lt-md="center center">
@@ -215,8 +215,6 @@
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
 
-
-
           <div class="item" fxLayout="column">
             <div fxLayout="row">
 
@@ -229,12 +227,18 @@
 
             </div>
             <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
-              interested in presenting his work then just write me a message on
-              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
-                 class="link-style-green">Slack</a>
-              or somewhere else!
+              <a class="slight-bold">NeurIPS GraphML orientation session:</a>
+              The first NeurIPS poster session is on Tuesday Dec 7th at 4:30pm UTC - 30 minutes after our reading group
+              starts. I decided to have a meeting for the 30 minutes before the first poster session starts, but we
+              won't be covering a paper.<br>
+              Instead, we will have a "NeurIPS GraphML orientation session"!<br>
+
+              We share with each other what GraphML/GeometricDL papers to look out for and share recommendations for
+              what poster presentations to visit!
+              Then, at 4:30pm UTC, you can jump onto the NeurIPS GatherTown and visit the GraphML poster presentations
+              that interest you the most.<br>
+              I hope that will help us get the most out of NeurIPS and I am curious to hear what your favorite NeurIPS
+              GraphML paper is, so come with a recommendation on Dec 7th!
             </p>
           </div>
 
@@ -405,8 +409,10 @@
             </div>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
-              First author of the paper Dr. <a class="item-subtitle link-style-black" href="https://danielegrattarola.github.io/"
-                                               target="_blank">Daniele Grattarola</a> who obtained his PhD working in Graph Machine Learning Group at the Università della Svizzera Italiana in 2021.
+              First author of the paper Dr. <a class="item-subtitle link-style-black"
+                                               href="https://danielegrattarola.github.io/"
+                                               target="_blank">Daniele Grattarola</a> who obtained his PhD working in
+              Graph Machine Learning Group at the Università della Svizzera Italiana in 2021.
             </p>
             <p class="no-margin">
               <a class="slight-bold">Abstract:</a>
