--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -217,7 +217,10 @@
 
           <div class="item" fxLayout="column">
             <div fxLayout="row">
-
+              <h3>
+                <a class="item-subtitle">
+                  NeurIPS GraphML orientation session!
+                </a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
@@ -227,7 +230,8 @@
 
             </div>
             <p class="paragraph">
-              <a class="slight-bold">NeurIPS GraphML orientation session:</a>
+              <a class="slight-bold">What we will do:</a><br>
+
               The first NeurIPS poster session is on Tuesday Dec 7th at 4:30pm UTC - 30 minutes after our reading group
               starts. I decided to have a meeting for the 30 minutes before the first poster session starts, but we
               won't be covering a paper.<br>
